<resources>
    <!-- Strings for general/titles -->
    <string name="app_name">MediaTracker 2.0</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete_item">Delete</string>
    <string name="move_item">Move Item</string>
    <string name="share_list">Share</string>
    <string name="copy_list">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="action_cancel">Cancel</string>

    <string name="menu_home">Home</string>
    <string name="menu_all_items">Search</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="media_add_to_list">Add to List</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="home_second">Home Second</string>
    <string name="fail_to_sign_in">Sign In Failed</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="home_fragment_tag">home fragment</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used to create a new List -->
    <string name="new_list_name_prompt">Enter the name of the new List</string>
    <string name="new_list_hint">Name of List</string>
    <string name="confirm_button">Confirm</string>
    <string name="list_already_exist">List with that name already exist!</string>
    <string name="list_empty_name">List name cannot be empty!</string>
    <string name="list_date_created">Date Created: </string>
    <string name="list_number_items">Items: </string>

    <!-- Strings used to set api key -->
    <string name="api_key_prompt">Enter your key from RapidAPI</string>
    <string name="api_key_hint">API KEY</string>
    <string name="api_key_menu_option">Set API Key</string>

    <!-- Strings used to describe an item -->
    <string name="item_episodes">Episodes: </string>
    <string name="item_type">Type: </string>
    <string name="item_status">Status: </string>
    <string name="item_rating">Rating: </string>
    <string name="item_title">Sample Title Text</string>

    <!-- Strings used for different type of items -->
    <string name="my_anime_list_anime">MAL Anime</string>
    <string name="my_anime_list_manga">MAL Manga</string>
    <string name="imdb_resource">IMDB</string>
    <string name="my_drama_list">MyDramaList</string>
    <string name="ani_list_anime">AniList Anime</string>
    <string name="ani_list_manga">AniList Manga</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- Strings for classifying sources -->
    <string name="anime_sources">Anime/Manga</string>
    <string name="general_sources">General</string>
    <string name="drama_sources">Drama</string>
    <string name="all_sources">All Sources</string>

    <!-- Strings for Search -->
    <string name="recommended_media">Recommended</string>
    <string name="trending_media">Trending</string>
    <string name="media_genre">Genre</string>
    <string name="media_top">Top</string>
    <string name="media_season">Seasons</string>
    <string name="media_upcoming">Upcoming</string>
    <string name="no_connection">No Internet Connection</string>

    <!-- String for media summary -->
    <string name="user_rating">Rate: </string>
    <string name="manage_tag_dialog_title">Custom Tags</string>
    <string name="user_status">Status: </string>
    <string name="media_sum_img_txt">Icon url: </string>
    <string name="media_sum_site_txt">Site url: </string>
    <string name="media_sum_addtag_txt">Add Tag</string>
    <string name="media_sum_rev_hint">Write a Review</string>
    <string name="no_list_to_add">No List To Add To!</string>
    <string name="add_to_list_first">Please Add media to a List first!</string>
    <string name="new_tag_prompt">Type the Name of the tag</string>
    <string name="new_tag_hint">Tag Name</string>
    <string name="new_tag_name_empty_err">Tag name cannot be empty!</string>


    <!-- String for add media to list dialog -->
    <string name="create_new_list">Create new list</string>

    <string name="hello_blank_fragment">Work In Progress</string>


</resources>
