<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/key_enter_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/key_enter_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/key_enter_prompt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/api_key_prompt"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/key_enter_api"
            style="@style/cursorColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="@string/api_key_hint"
            android:backgroundTint="@color/edit_text_bar"
            android:ems="10"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/api_key_hint"
            android:inputType="textPersonName"
            android:paddingTop="20dp" />

        <Button
            android:id="@+id/key_enter_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>