<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_list_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/new_list_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/new_list_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/new_list_name_prompt"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/new_list_title"
            style="@style/userInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/new_list_hint"
            android:backgroundTint="@color/edit_text_bar"
            android:ems="10"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/new_list_hint"
            android:inputType="textPersonName"
            android:paddingTop="20dp" />

        <Button
            android:id="@+id/new_list_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button" />

        <TextView
            android:id="@+id/new_list_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>