<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mediatracker20.ui.search.data.AnimeSearch" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/recommend_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="7.5dp"
                android:text="@string/recommended_media"
                android:textColor="@android:color/secondary_text_dark_nodisable"
                android:textSize="24sp"
                android:textStyle="bold" />

            <include
                layout="@layout/media_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="#3a3a3a"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:id="@+id/categories_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#3a3a3a"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher_round"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:text="@string/media_genre"
                        android:textColor="@android:color/secondary_text_dark_nodisable"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:text="@string/media_top"
                        android:textColor="@android:color/secondary_text_dark_nodisable"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/seasons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:text="@string/media_season"
                        android:textColor="@android:color/secondary_text_dark_nodisable"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/upcoming"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:drawableTop="@mipmap/ic_launcher"
                        android:gravity="center"
                        android:text="@string/media_upcoming"
                        android:textColor="@android:color/secondary_text_dark_nodisable"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/trending_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="7.5dp"
                android:text="@string/trending_media"
                android:textColor="@android:color/secondary_text_dark_nodisable"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="178dp" />

            <LinearLayout
                android:id="@+id/trending_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7.5dp"
                android:layout_marginRight="7.5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/layout_background"
                android:divider="@drawable/list_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <ProgressBar
                    android:id="@+id/trendingProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/progress_bar" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
