<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_card_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="false"
    android:contextClickable="false"
    android:longClickable="false"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    app:cardMaxElevation="10dp">

    <LinearLayout
        android:id="@+id/media_source_layout"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_gravity="center"
        android:background="@drawable/card_press_selector"
        android:clickable="true"
        android:contextClickable="false"
        android:focusable="true"
        android:foregroundGravity="center"
        android:gravity="center"
        android:longClickable="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/list_card_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="false"
            android:contextClickable="false"
            android:gravity="center_horizontal|center_vertical"
            android:linksClickable="false"
            android:longClickable="false"
            android:maxLines="2"
            android:text="@string/item_title"
            android:textAlignment="gravity"
            android:textColor="?android:attr/textColorSecondaryNoDisable"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/list_card_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="false"
            android:contextClickable="false"
            android:longClickable="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_card_items"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="false"
                android:contextClickable="false"
                android:gravity="center"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/list_number_items"
                android:textColor="?android:attr/textColorSecondaryNoDisable"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_card_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="false"
                android:contextClickable="false"
                android:gravity="center"
                android:linksClickable="false"
                android:longClickable="false"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@string/list_date_created"
                android:textColor="?android:attr/textColorSecondaryNoDisable"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>