<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mediatracker20.ui.home.ListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_nav_home_to_itemListFragment"
            app:destination="@id/itemListFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mediatracker20.ui.search.SearchFragment"
        android:label="@string/menu_all_items"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_gallery_to_animeSearch"
            app:destination="@id/animeSearch"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in" />
        <action
            android:id="@+id/action_nav_gallery_to_generalSearch"
            app:destination="@id/generalSearch"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_gallery_to_dramaSearch"
            app:destination="@id/dramaSearch"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_gallery_to_mangaSearch"
            app:destination="@id/mangaSearch"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mediatracker20.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/itemListFragment"
        android:name="com.example.mediatracker20.ui.items.ItemListFragment"
        android:label="item_list_fragment"
        tools:layout="@layout/fragment_media" >
        <action
            android:id="@+id/action_itemListFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_itemListFragment_to_itemSumamry"
            app:destination="@id/itemSumamry"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/animeSearch"
        android:name="com.example.mediatracker20.ui.search.data.AnimeSearch"
        android:label="anime_search_fragment"
        tools:layout="@layout/anime_search_fragment" >
        <action
            android:id="@+id/action_animeSearch_to_animeSearchDisplay"
            app:destination="@id/animeSearchDisplay"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_animeSearch_to_itemSumamry"
            app:destination="@id/itemSumamry"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/dramaSearch"
        android:name="com.example.mediatracker20.ui.search.data.DramaSearch"
        android:label="fragment_drama_search"
        tools:layout="@layout/fragment_drama_search" >
        <action
            android:id="@+id/action_dramaSearch_to_itemSumamry"
            app:destination="@id/itemSumamry"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/generalSearch"
        android:name="com.example.mediatracker20.ui.search.data.GeneralSearch"
        android:label="fragment_general_search"
        tools:layout="@layout/fragment_general_search" >
        <action
            android:id="@+id/action_generalSearch_to_itemSumamry"
            app:destination="@id/itemSumamry"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/mangaSearch"
        android:name="com.example.mediatracker20.ui.search.data.MangaSearch"
        android:label="fragment_manga_search"
        tools:layout="@layout/fragment_manga_search" >
        <action
            android:id="@+id/action_mangaSearch_to_itemSumamry"
            app:destination="@id/itemSumamry"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/animeSearchDisplay"
        android:name="com.example.mediatracker20.ui.search.data.searchDisplay.AnimeSearchDisplay"
        android:label="fragment_anime_search_display"
        tools:layout="@layout/fragment_anime_search_display" >
        <action
            android:id="@+id/action_animeSearchDisplay_to_itemSumamry"
            app:destination="@id/itemSumamry"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment
        android:id="@+id/itemSumamry"
        android:name="com.example.mediatracker20.ui.ItemSummary"
        android:label="fragment_item_sumamry"
        tools:layout="@layout/fragment_media_summary" />
</navigation>